🔧 build: adjust base url bug

--- a/docs/_includes/footer_custom.html
+++ b/docs/_includes/footer_custom.html
@@ -2,5 +2,5 @@
 # appears at the bottom of every page's main content -->
 <p class="text-small text-grey-dk-100 mb-0">
     Copyright &copy; 2020-2024 bobokick. Distributed by an <a
-        href="https://github.com/bobokick/Cpp_Guide_detailed/blob/master/LICENSE">Apache License 2.0.</a>
+        href="{{- site.github_url -}}/{{- site.repository -}}/blob/{{- site.source_branch -}}/LICENSE">Apache License 2.0.</a>
 </p>
