--- a/docs/_includes/nav_footer_custom.html
+++ b/docs/_includes/nav_footer_custom.html
@@ -9,6 +9,6 @@
             {%- endif -%}
         </b>主题
     </button>
-    <script src="/assets/js/cookie_manager.js"></script>
-    <script src="/assets/js/theme_switch.js"></script>
+    <script src={{- "/assets/js/cookie_manager.js" | relative_url -}}></script>
+    <script src={{- "/assets/js/theme_switch.js" | relative_url -}}></script>
 </footer>
